--- a/src/main/resources/application-prodZhong.yml
+++ b/src/main/resources/application-prodZhong.yml
@@ -23,17 +23,17 @@ spring:
       default-ip-address: 39.108.127.117
   redis:
     database: 0
-    host: localhost
-    port: 6379
-    password:
+    host: 60.205.212.112
+    port: 6380
+    password: 19971002wy
     timeout: 5000
   datasource:
-    url: jdbc:mysql://39.108.127.117/file_server?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
-#    url: jdbc:mysql://localhost/file_server?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
-
+    url: jdbc:mysql://60.205.212.112:3307/file_server?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+    #    url: jdbc:mysql://localhost/file_server?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
     username: root
-    password: 123456
+    password: 19971002wy
     driver-class-name: com.mysql.cj.jdbc.Driver
+
     druid:
       filters: stat,wall,slf4j,config
       max-active: 100
@@ -51,8 +51,8 @@ spring:
 
 app:
   imgPath: D:/img/
-  filePath: D:/img/
-#  filePath: /root/javaPro/img/
+#  filePath: D:/img/
+  filePath: /root/javaPro/img/
   info: 在线文档
   author: BitC
   email: 276819708@qq.com
